UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_UCFExchangeDetail__c/ftr_UCFExchangeDetail__c.object-meta.xml
<CustomObject>
    <label>ftr_UCFExchangeDetail</label>
    <nameField>
        <label>ftr_UCFExchangeDetail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ftr_UCFExchangeDetails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>