UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_UCFExchangeDetail__c/fields/DPI_Env__c.field-meta.xml
<CustomField>
    <fullName>DPI_Env__c</fullName>
    <label>DPI Env</label>
    <length>15</length>
    <type>Text</type>
</CustomField>