UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_UCFExchangeDetail__c/fields/DPI_Environment__c.field-meta.xml
<CustomField>
    <fullName>DPI_Environment__c</fullName>
    <label>DPI Environment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>