UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_UCFExchangeDetail__c/fields/DPI_NPA_NXX__c.field-meta.xml
<CustomField>
    <fullName>DPI_NPA_NXX__c</fullName>
    <label>DPI NPA/ NXX</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>