UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_UCFExchangeDetail__c/fields/DPI_Office_Code__c.field-meta.xml
<CustomField>
    <fullName>DPI_Office_Code__c</fullName>
    <label>DPI Office Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>