UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_UCFExchangeDetail__c/fields/DPI_Study_Code__c.field-meta.xml
<CustomField>
    <fullName>DPI_Study_Code__c</fullName>
    <label>DPI Study Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>