UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_UCFExchangeDetail__c/fields/DPI_Wire_Center__c.field-meta.xml
<CustomField>
    <fullName>DPI_Wire_Center__c</fullName>
    <label>DPI Wire Center</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>