UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_UCFExchangeDetail__c/fields/EM_2024_Project__c.field-meta.xml
<CustomField>
    <fullName>EM_2024_Project__c</fullName>
    <label>EM 2024 Project #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>