UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_UCFExchangeDetail__c/fields/Exchange_Name__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Name__c</fullName>
    <label>Exchange Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>