UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_UCFExchangeDetail__c/fields/Exchange_Number__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Number__c</fullName>
    <label>Exchange Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>