UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_UCFExchangeDetail__c/fields/FICT__c.field-meta.xml
<CustomField>
    <fullName>FICT__c</fullName>
    <label>FICT NPANXX</label>
    <length>255</length>
    <type>Text</type>
</CustomField>