UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_UCFExchangeDetail__c/fields/NPR_Ship_To__c.field-meta.xml
<CustomField>
    <fullName>NPR_Ship_To__c</fullName>
    <label>NPR Ship To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>