UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_UCFExchangeDetail__c/fields/TARIFF__c.field-meta.xml
<CustomField>
    <fullName>TARIFF__c</fullName>
    <label>TARIFF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>