UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_UCFExchangeDetail__c/fields/W_C__c.field-meta.xml
<CustomField>
    <fullName>W_C__c</fullName>
    <label>W/C</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>